prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/newline_in_const.nut
// EXPECT_ERROR: "newline in a constant"
let x = "hello
"